Setup font & navbar

--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../css/output.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="../css/output.css">
-</head>
-
-<body>
-  <h1>Hello world</h1>
-</body>
-
+  <body class="font-poppins">
+    <nav class="container mx-auto flex justify-between items-center py-6">
+      <a href="" class="font-semibold text-3xl">Codinger</a>
+      <div class="flex gap-16 items-center">
+        <div class="flex gap-6">
+          <a href="">Beranda</a>
+          <a href="">Kelas</a>
+        </div>
+        <div class="flex gap-6">
+          <a href="" class="px-5 py-1.5 border border-sky-500 text-sky-500"
+            >Masuk</a
+          >
+          <a href="" class="px-5 py-1.5 bg-sky-500 text-white">Daftar</a>
+        </div>
+      </div>
+    </nav>
+  </body>
 </html>
