--- a/src/pages/courses.html
+++ b/src/pages/courses.html
@@ -371,6 +371,38 @@
       </div>
     </div>
   </main>
+  <footer class="mt-4 py-8 px-8 lg:px-36 gap-6 bg-slate-300 flex justify-between flex-wrap">
+    <div class="">
+      <h1 class="text-3xl font-semibold">Codinger</h1>
+      <div class="flex gap-5 text-2xl mt-6 mb-4">
+        <a href="#">
+          <i class="fa-brands fa-instagram"></i>
+        </a>
+        <a href="#">
+          <i class="fa-brands fa-tiktok"></i>
+        </a>
+        <a href="#">
+          <i class="fa-brands fa-facebook"></i>
+        </a>
+        <a href="#">
+          <i class="fa-regular fa-envelope"></i>
+        </a>
+      </div>
+      <div>&copy; Codinger 2024</div>
+    </div>
+    <div class="flex gap-8 md:gap-24">
+      <div>
+        <h2 class="text-2xl font-semibold mb-6">Navigasi</h2>
+        <a href="#" class="mt-3 block w-fit">Beranda</a>
+        <a href="#" class="mt-3 block w-fit">Navigasi</a>
+      </div>
+      <div>
+        <h2 class="text-2xl font-semibold mb-6">Akun</h2>
+        <a href="#" class="mt-3 block w-fit">Masuk</a>
+        <a href="#" class="mt-3 block w-fit">Daftar</a>
+      </div>
+    </div>
+  </footer>
 
 
 </body>
