Webinar dan Perbaiki Style

--- a/src/pages/detail-kelas.html
+++ b/src/pages/detail-kelas.html
@@ -21,27 +21,36 @@
   </head>
 
   <body class="font-poppins">
-    <nav class="navbar sticky top-0 bg-white">
+    <nav class="navbar sticky top-0 bg-white z-50">
       <div
         class="container mx-auto flex justify-between items-center py-4 md:py-6 pl-6 pr-3 lg:px-16"
       >
         <a href="" class="font-semibold text-3xl">Codinger</a>
         <div class="navbar-nav gap-16 items-center hidden md:flex">
           <div class="nav-menu flex gap-6">
-            <a href="" class="px-4 py-1.5 hover:bg-slate-50 rounded-md"
+            <a href="./" class="px-4 py-1.5 hover:bg-slate-50 rounded-md"
               >Beranda</a
             >
-            <a href="" class="px-4 py-1.5 hover:bg-slate-50 rounded-md"
+            <a
+              href="./kelas.html"
+              class="px-4 py-1.5 hover:bg-slate-50 rounded-md"
               >Kelas</a
+            >
+            <a
+              href="./webinar.html"
+              class="px-4 py-1.5 hover:bg-slate-50 rounded-md"
+              >Webinar</a
             >
           </div>
           <div class="flex gap-6 px-2">
             <a
-              href=""
-              class="px-5 py-1.5 border border-sky-500 text-sky-500 rounded-md"
+              href="./login.html"
+              class="px-5 py-1.5 border border-sky-500 text-sky-500 rounded-md hover:bg-sky-500 hover:text-white transition duration-300"
               >Masuk</a
             >
-            <a href="" class="px-5 py-1.5 bg-sky-500 text-white rounded-md"
+            <a
+              href="./register.html"
+              class="px-5 py-1.5 bg-sky-500 text-white rounded-md hover:bg-sky-600 transition duration-300"
               >Daftar</a
             >
           </div>
@@ -145,40 +154,40 @@
         <div class="flex gap-x-10 gap-y-2 flex-col md:flex-row">
           <div class="w-full md:w-[60%]">
             <h2 class="text-2xl font-semibold mt-6 mb-4">Daftar Materi</h2>
-            <ul class="text-lg">
+            <ul class="text-lg list-materi">
               <li
                 class="px-6 py-4 border-b first:border-t hover:bg-slate-50 cursor-pointer"
               >
-                <i class="fa-solid fa-lock mr-3 hover:bg-slate-50"></i>
+                <i class="fa-solid fa-lock mr-3"></i>
                 Pendahuluan
               </li>
               <li
                 class="px-6 py-4 border-b first:border-t hover:bg-slate-50 cursor-pointer"
               >
-                <i class="fa-solid fa-lock mr-3 hover:bg-slate-50"></i>
+                <i class="fa-solid fa-lock mr-3"></i>
                 Penginstalan Laravel
               </li>
               <li
                 class="px-6 py-4 border-b first:border-t hover:bg-slate-50 cursor-pointer"
               >
-                <i class="fa-solid fa-lock mr-3 hover:bg-slate-50"></i>
+                <i class="fa-solid fa-lock mr-3"></i>
                 Pengenalan ORM
               </li>
               <li
                 class="px-6 py-4 border-b first:border-t hover:bg-slate-50 cursor-pointer"
               >
-                <i class="fa-solid fa-lock mr-3 hover:bg-slate-50"></i>
+                <i class="fa-solid fa-lock mr-3"></i>
                 Migration di Laravel
               </li>
               <li
                 class="px-6 py-4 border-b first:border-t hover:bg-slate-50 cursor-pointer"
               >
-                <i class="fa-solid fa-lock mr-3 hover:bg-slate-50"></i>
+                <i class="fa-solid fa-lock mr-3"></i>
                 Konsep Model Eloquent
               </li>
             </ul>
             <div class="text-center mt-3">
-              <a href="#" class="hover:underline">
+              <a href="#" class="hover:underline selengkapnya">
                 Selengkapnya <i class="fa-solid fa-chevron-down"></i>
               </a>
             </div>
@@ -232,12 +241,12 @@
           <div class="border px-5 py-4 rounded-md">
             <div class="flex gap-4 items-center">
               <img
-                src="https://source.unsplash.com/65x65?profile"
+                src="https://source.unsplash.com/66x66?profile"
                 alt=""
                 class="w-14 h-14 rounded-full"
               />
               <div>
-                <h3 class="text-lg font-medium">Wahyu Pranata</h3>
+                <h3 class="text-lg font-medium">Made Aditya</h3>
                 <div class="text-yellow-400 font-medium mt-1.5">
                   <span class="mr-2">5.0</span>
                   <i class="fa-solid fa-star"></i>
@@ -257,12 +266,12 @@
           <div class="border px-5 py-4 rounded-md">
             <div class="flex gap-4 items-center">
               <img
-                src="https://source.unsplash.com/65x65?profile"
+                src="https://source.unsplash.com/67x67?profile"
                 alt=""
                 class="w-14 h-14 rounded-full"
               />
               <div>
-                <h3 class="text-lg font-medium">Wahyu Pranata</h3>
+                <h3 class="text-lg font-medium">Rovan Wardana</h3>
                 <div class="text-yellow-400 font-medium mt-1.5">
                   <span class="mr-2">5.0</span>
                   <i class="fa-solid fa-star"></i>
