--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -21,27 +21,36 @@
   </head>
 
   <body class="font-poppins">
-    <nav class="navbar sticky top-0 bg-white">
+    <nav class="navbar sticky top-0 bg-white z-50">
       <div
         class="container mx-auto flex justify-between items-center py-4 md:py-6 pl-6 pr-3 lg:px-16"
       >
         <a href="" class="font-semibold text-3xl">Codinger</a>
         <div class="navbar-nav gap-16 items-center hidden md:flex">
           <div class="nav-menu flex gap-6">
-            <a href="" class="px-4 py-1.5 hover:bg-slate-50 rounded-md"
+            <a href="./" class="px-4 py-1.5 hover:bg-slate-50 rounded-md"
               >Beranda</a
             >
-            <a href="" class="px-4 py-1.5 hover:bg-slate-50 rounded-md"
+            <a
+              href="./kelas.html"
+              class="px-4 py-1.5 hover:bg-slate-50 rounded-md"
               >Kelas</a
+            >
+            <a
+              href="./webinar.html"
+              class="px-4 py-1.5 hover:bg-slate-50 rounded-md"
+              >Webinar</a
             >
           </div>
           <div class="flex gap-6 px-2">
             <a
-              href=""
-              class="px-5 py-1.5 border border-sky-500 text-sky-500 rounded-md"
+              href="./login.html"
+              class="px-5 py-1.5 border border-sky-500 text-sky-500 rounded-md hover:bg-sky-500 hover:text-white transition duration-300"
               >Masuk</a
             >
-            <a href="" class="px-5 py-1.5 bg-sky-500 text-white rounded-md"
+            <a
+              href="./register.html"
+              class="px-5 py-1.5 bg-sky-500 text-white rounded-md hover:bg-sky-600 transition duration-300"
               >Daftar</a
             >
           </div>
@@ -66,7 +75,9 @@
           Bersama <span class="text-sky-500">Codinger</span> tidak ada alasan
           untuk tidak belajar
         </p>
-        <a href="#" class="btn-primary mt-3 inline-block shadow-md"
+        <a
+          href="#"
+          class="btn-primary mt-3 inline-block shadow-md rounded-md hover:bg-sky-600"
           >Daftar Sekarang</a
         >
       </div>
@@ -115,7 +126,7 @@
         alt=""
         class="w-[35%] hidden md:block"
       />
-      <div class="lg:mt-4 w-full">
+      <div class="lg:mt-4 w-fit max-w-full">
         <h2 class="text-2xl font-semibold">
           Mengapa memilih <span class="text-sky-500">Codinger</span>?
         </h2>
@@ -158,8 +169,8 @@
               28 Peserta
             </div>
             <a
-              href="#"
-              class="block w-fit px-3 py-1.5 mt-3 bg-sky-500 text-white mx-auto"
+              href="./detail-kelas.html"
+              class="block w-fit px-3 py-1.5 mt-3 bg-sky-500 text-white mx-auto rounded-md hover:bg-sky-600"
               >Mulai Belajar</a
             >
           </div>
@@ -188,8 +199,8 @@
               28 Peserta
             </div>
             <a
-              href="#"
-              class="block w-fit px-3 py-1.5 mt-3 bg-sky-500 text-white mx-auto"
+              href="./detail-kelas.html"
+              class="block w-fit px-3 py-1.5 mt-3 bg-sky-500 text-white mx-auto rounded-md hover:bg-sky-600"
               >Mulai Belajar</a
             >
           </div>
@@ -218,8 +229,8 @@
               28 Peserta
             </div>
             <a
-              href="#"
-              class="block w-fit px-3 py-1.5 mt-3 bg-sky-500 text-white mx-auto"
+              href="./detail-kelas.html"
+              class="block w-fit px-3 py-1.5 mt-3 bg-sky-500 text-white mx-auto rounded-md hover:bg-sky-600"
               >Mulai Belajar</a
             >
           </div>
@@ -248,8 +259,8 @@
               28 Peserta
             </div>
             <a
-              href="#"
-              class="block w-fit px-3 py-1.5 mt-3 bg-sky-500 text-white mx-auto"
+              href="./detail-kelas.html"
+              class="block w-fit px-3 py-1.5 mt-3 bg-sky-500 text-white mx-auto rounded-md hover:bg-sky-600"
               >Mulai Belajar</a
             >
           </div>
@@ -257,7 +268,7 @@
       </div>
       <a
         href="#"
-        class="block w-fit px-4 py-2 mt-10 bg-sky-500 text-white mx-auto shadow-md"
+        class="block w-fit px-4 py-2 mt-10 bg-sky-500 text-white mx-auto shadow-md rounded-md hover:bg-sky-600"
         >Lihat Semua Kelas</a
       >
     </div>
