--- a/src/pages/webinar.html
+++ b/src/pages/webinar.html
@@ -21,27 +21,36 @@
   </head>
 
   <body class="font-poppins">
-    <nav class="navbar sticky top-0 bg-white">
+    <nav class="navbar sticky top-0 bg-white z-50">
       <div
         class="container mx-auto flex justify-between items-center py-4 md:py-6 pl-6 pr-3 lg:px-16"
       >
         <a href="" class="font-semibold text-3xl">Codinger</a>
         <div class="navbar-nav gap-16 items-center hidden md:flex">
           <div class="nav-menu flex gap-6">
-            <a href="" class="px-4 py-1.5 hover:bg-slate-50 rounded-md"
+            <a href="./" class="px-4 py-1.5 hover:bg-slate-50 rounded-md"
               >Beranda</a
             >
-            <a href="" class="px-4 py-1.5 hover:bg-slate-50 rounded-md"
+            <a
+              href="./kelas.html"
+              class="px-4 py-1.5 hover:bg-slate-50 rounded-md"
               >Kelas</a
+            >
+            <a
+              href="./webinar.html"
+              class="px-4 py-1.5 hover:bg-slate-50 rounded-md"
+              >Webinar</a
             >
           </div>
           <div class="flex gap-6 px-2">
             <a
-              href=""
-              class="px-5 py-1.5 border border-sky-500 text-sky-500 rounded-md"
+              href="./login.html"
+              class="px-5 py-1.5 border border-sky-500 text-sky-500 rounded-md hover:bg-sky-500 hover:text-white transition duration-300"
               >Masuk</a
             >
-            <a href="" class="px-5 py-1.5 bg-sky-500 text-white rounded-md"
+            <a
+              href="./register.html"
+              class="px-5 py-1.5 bg-sky-500 text-white rounded-md hover:bg-sky-600 transition duration-300"
               >Daftar</a
             >
           </div>
@@ -54,13 +63,13 @@
       </div>
     </nav>
 
-    <div class="container mx-auto lg:px-20 px-5 sm:px-10 py-6">
-      <div>
-        <h1 class="text-2xl font-semibold mb-4">Cari Webinar Terkini</h1>
-        <p>Mencari webinar kini sangat mudah</p>
-      </div>
+    <div class="bg-sky-500 py-6 px-5 lg:px-24 text-white">
+      <h1 class="text-2xl font-semibold mb-4">Cari Webinar Terkini</h1>
+      <p>Mencari webinar kini sangat mudah</p>
+    </div>
+    <div class="container mx-auto lg:px-20 px-5 sm:px-10">
       <div class="mt-6 flex gap-6">
-        <div class="pr-6 border-r">
+        <div class="pr-6 border-r hidden lg:block">
           <h3 class="text-xl font-semibold">Topik</h3>
           <ul class="mt-5">
             <li>
@@ -105,15 +114,35 @@
           </ul>
         </div>
         <div class="flex-grow">
-          <div class="flex">
-            <input
-              type="text"
-              class="px-2 py-3 rounded-l-md border focus:outline-none"
-              placeholder="Cari Webinar"
-            />
-            <button class="p-3 border border-l-0 rounded-r-md">
-              <i class="fa-solid fa-search"></i>
-            </button>
+          <div class="flex gap-6 flex-wrap">
+            <div class="flex">
+              <input
+                type="text"
+                class="px-2 py-3 rounded-l-md border focus:outline-none"
+                placeholder="Cari Webinar"
+              />
+              <button class="p-3 border border-l-0 rounded-r-md">
+                <i class="fa-solid fa-search"></i>
+              </button>
+            </div>
+            <select
+              class="border rounded-md lg:hidden block focus:outline-none"
+            >
+              <option value="" selected disabled>Pilih Topik</option>
+              <option value="Pengembangan Diri">Pengembangan Diri</option>
+              <option value="Artificial Intelligenc">
+                Artificial Intelligence
+              </option>
+              <option value="Web Development">Web Development</option>
+              <option value="Mobile App Development">
+                Mobile App Development
+              </option>
+              <option value="Software Engineering">Software Engineering</option>
+              <option value="Karir IT">Karir IT</option>
+              <option value="Kuliah IT">Kuliah IT</option>
+              <option value="UI/UX Design">UI/UX Design</option>
+              <option value="Backend Development">Backend Development</option>
+            </select>
           </div>
           <div class="webinar-grid gap-6 mt-6">
             <div class="rounded-lg overflow-hidden border">
@@ -132,10 +161,13 @@
                   <i class="fa-solid fa-users mr-1"></i>
                   15 Peserta
                 </div>
+                <div class="mt-2">
+                  <i class="fa-solid fa-money-bill-wave mr-1"></i>
+                  Rp 50.000
+                </div>
               </div>
-              <a href="" class="px-3 py-2 border-t flex justify-between">
-                <div>Beli</div>
-                <div class="font-medium">Rp 50.000</div>
+              <a href="" class="px-3 py-2 border-t block hover:underline"
+                >Info Selengkapnya
               </a>
             </div>
             <div class="rounded-lg overflow-hidden border">
@@ -154,10 +186,13 @@
                   <i class="fa-solid fa-users mr-1"></i>
                   15 Peserta
                 </div>
+                <div class="mt-2">
+                  <i class="fa-solid fa-money-bill-wave mr-1"></i>
+                  Rp 50.000
+                </div>
               </div>
-              <a href="" class="px-3 py-2 border-t flex justify-between">
-                <div>Beli</div>
-                <div class="font-medium">Rp 50.000</div>
+              <a href="" class="px-3 py-2 border-t block hover:underline"
+                >Info Selengkapnya
               </a>
             </div>
             <div class="rounded-lg overflow-hidden border">
@@ -176,10 +211,13 @@
                   <i class="fa-solid fa-users mr-1"></i>
                   15 Peserta
                 </div>
+                <div class="mt-2">
+                  <i class="fa-solid fa-money-bill-wave mr-1"></i>
+                  Rp 50.000
+                </div>
               </div>
-              <a href="" class="px-3 py-2 border-t flex justify-between">
-                <div>Beli</div>
-                <div class="font-medium">Rp 50.000</div>
+              <a href="" class="px-3 py-2 border-t block hover:underline"
+                >Info Selengkapnya
               </a>
             </div>
             <div class="rounded-lg overflow-hidden border">
@@ -198,10 +236,13 @@
                   <i class="fa-solid fa-users mr-1"></i>
                   15 Peserta
                 </div>
+                <div class="mt-2">
+                  <i class="fa-solid fa-money-bill-wave mr-1"></i>
+                  Rp 50.000
+                </div>
               </div>
-              <a href="" class="px-3 py-2 border-t flex justify-between">
-                <div>Beli</div>
-                <div class="font-medium">Rp 50.000</div>
+              <a href="" class="px-3 py-2 border-t block hover:underline"
+                >Info Selengkapnya
               </a>
             </div>
             <div class="rounded-lg overflow-hidden border">
@@ -220,10 +261,13 @@
                   <i class="fa-solid fa-users mr-1"></i>
                   15 Peserta
                 </div>
+                <div class="mt-2">
+                  <i class="fa-solid fa-money-bill-wave mr-1"></i>
+                  Rp 50.000
+                </div>
               </div>
-              <a href="" class="px-3 py-2 border-t flex justify-between">
-                <div>Beli</div>
-                <div class="font-medium">Rp 50.000</div>
+              <a href="" class="px-3 py-2 border-t block hover:underline"
+                >Info Selengkapnya
               </a>
             </div>
             <div class="rounded-lg overflow-hidden border">
@@ -242,10 +286,13 @@
                   <i class="fa-solid fa-users mr-1"></i>
                   15 Peserta
                 </div>
+                <div class="mt-2">
+                  <i class="fa-solid fa-money-bill-wave mr-1"></i>
+                  Rp 50.000
+                </div>
               </div>
-              <a href="" class="px-3 py-2 border-t flex justify-between">
-                <div>Beli</div>
-                <div class="font-medium">Rp 50.000</div>
+              <a href="" class="px-3 py-2 border-t block hover:underline"
+                >Info Selengkapnya
               </a>
             </div>
             <div class="rounded-lg overflow-hidden border">
@@ -264,18 +311,177 @@
                   <i class="fa-solid fa-users mr-1"></i>
                   15 Peserta
                 </div>
+                <div class="mt-2">
+                  <i class="fa-solid fa-money-bill-wave mr-1"></i>
+                  Rp 50.000
+                </div>
               </div>
-              <a href="" class="px-3 py-2 border-t flex justify-between">
-                <div>Beli</div>
-                <div class="font-medium">Rp 50.000</div>
+              <a href="" class="px-3 py-2 border-t block hover:underline"
+                >Info Selengkapnya
               </a>
             </div>
           </div>
+          <!-- <div class="webinar-grid gap-6 mt-6">
+            <div class="rounded-lg overflow-hidden border">
+              <img
+                src="../img/card-img.jpg"
+                alt=""
+                class="h-48 w-full object-cover"
+              />
+              <div class="py-3 px-3 w-full bg-white">
+                <h3 class="text-xl font-medium">Skillvul AI Webinar</h3>
+                <div class="mt-2">
+                  <i class="fa-regular fa-calendar mr-1"></i>
+                  31 Desember 2024
+                </div>
+                <div class="mt-2">
+                  <i class="fa-solid fa-users mr-1"></i>
+                  15 Peserta
+                </div>
+              </div>
+              <a href="" class="px-3 py-2 border-t flex justify-between">
+                <div>Daftar</div>
+                <div class="font-medium">Rp 50.000</div>
+              </a>
+            </div>
+            <div class="rounded-lg overflow-hidden border">
+              <img
+                src="../img/card-img.jpg"
+                alt=""
+                class="h-48 w-full object-cover"
+              />
+              <div class="py-3 px-3 w-full bg-white">
+                <h3 class="text-xl font-medium">Skillvul AI Webinar</h3>
+                <div class="mt-2">
+                  <i class="fa-regular fa-calendar mr-1"></i>
+                  31 Desember 2024
+                </div>
+                <div class="mt-2">
+                  <i class="fa-solid fa-users mr-1"></i>
+                  15 Peserta
+                </div>
+              </div>
+              <a href="" class="px-3 py-2 border-t flex justify-between">
+                <div>Daftar</div>
+                <div class="font-medium">Rp 50.000</div>
+              </a>
+            </div>
+            <div class="rounded-lg overflow-hidden border">
+              <img
+                src="../img/card-img.jpg"
+                alt=""
+                class="h-48 w-full object-cover"
+              />
+              <div class="py-3 px-3 w-full bg-white">
+                <h3 class="text-xl font-medium">Skillvul AI Webinar</h3>
+                <div class="mt-2">
+                  <i class="fa-regular fa-calendar mr-1"></i>
+                  31 Desember 2024
+                </div>
+                <div class="mt-2">
+                  <i class="fa-solid fa-users mr-1"></i>
+                  15 Peserta
+                </div>
+              </div>
+              <a href="" class="px-3 py-2 border-t flex justify-between">
+                <div>Daftar</div>
+                <div class="font-medium">Rp 50.000</div>
+              </a>
+            </div>
+            <div class="rounded-lg overflow-hidden border">
+              <img
+                src="../img/card-img.jpg"
+                alt=""
+                class="h-48 w-full object-cover"
+              />
+              <div class="py-3 px-3 w-full bg-white">
+                <h3 class="text-xl font-medium">Skillvul AI Webinar</h3>
+                <div class="mt-2">
+                  <i class="fa-regular fa-calendar mr-1"></i>
+                  31 Desember 2024
+                </div>
+                <div class="mt-2">
+                  <i class="fa-solid fa-users mr-1"></i>
+                  15 Peserta
+                </div>
+              </div>
+              <a href="" class="px-3 py-2 border-t flex justify-between">
+                <div>Daftar</div>
+                <div class="font-medium">Rp 50.000</div>
+              </a>
+            </div>
+            <div class="rounded-lg overflow-hidden border">
+              <img
+                src="../img/card-img.jpg"
+                alt=""
+                class="h-48 w-full object-cover"
+              />
+              <div class="py-3 px-3 w-full bg-white">
+                <h3 class="text-xl font-medium">Skillvul AI Webinar</h3>
+                <div class="mt-2">
+                  <i class="fa-regular fa-calendar mr-1"></i>
+                  31 Desember 2024
+                </div>
+                <div class="mt-2">
+                  <i class="fa-solid fa-users mr-1"></i>
+                  15 Peserta
+                </div>
+              </div>
+              <a href="" class="px-3 py-2 border-t flex justify-between">
+                <div>Daftar</div>
+                <div class="font-medium">Rp 50.000</div>
+              </a>
+            </div>
+            <div class="rounded-lg overflow-hidden border">
+              <img
+                src="../img/card-img.jpg"
+                alt=""
+                class="h-48 w-full object-cover"
+              />
+              <div class="py-3 px-3 w-full bg-white">
+                <h3 class="text-xl font-medium">Skillvul AI Webinar</h3>
+                <div class="mt-2">
+                  <i class="fa-regular fa-calendar mr-1"></i>
+                  31 Desember 2024
+                </div>
+                <div class="mt-2">
+                  <i class="fa-solid fa-users mr-1"></i>
+                  15 Peserta
+                </div>
+              </div>
+              <a href="" class="px-3 py-2 border-t flex justify-between">
+                <div>Daftar</div>
+                <div class="font-medium">Rp 50.000</div>
+              </a>
+            </div>
+            <div class="rounded-lg overflow-hidden border">
+              <img
+                src="../img/card-img.jpg"
+                alt=""
+                class="h-48 w-full object-cover"
+              />
+              <div class="py-3 px-3 w-full bg-white">
+                <h3 class="text-xl font-medium">Skillvul AI Webinar</h3>
+                <div class="mt-2">
+                  <i class="fa-regular fa-calendar mr-1"></i>
+                  31 Desember 2024
+                </div>
+                <div class="mt-2">
+                  <i class="fa-solid fa-users mr-1"></i>
+                  15 Peserta
+                </div>
+              </div>
+              <a href="" class="px-3 py-2 border-t flex justify-between">
+                <div>Daftar</div>
+                <div class="font-medium">Rp 50.000</div>
+              </a>
+            </div>
+          </div> -->
         </div>
       </div>
     </div>
 
-    <!-- <footer
+    <footer
       class="py-8 px-8 lg:px-36 gap-6 bg-slate-100 flex justify-between flex-wrap"
     >
       <div class="">
@@ -308,7 +514,7 @@
           <a href="#" class="mt-3 block w-fit">Daftar</a>
         </div>
       </div>
-    </footer> -->
+    </footer>
 
     <script src="../js/script.js"></script>
   </body>
